<resources>
    <string name="app_name">DailyApp</string>
    <string name="add_new">Add New</string>
    <string name="back">Back</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_list">Edit List</string>
    <string name="type">%1s</string>
    <string name="create_new_list">Create New List</string>
    <string name="list_name">List Name</string>
    <string name="list_color">List \nColor</string>
    <string name="create_list">Create List</string>
    <string name="create_new_to_do">Create New To-Do</string>
    <string name="to_do_name">To-Do Name</string>
    <string name="to_do_color">To-Do \nColor</string>
    <string name="create_to_do">Create To-Do</string>
    <string name="description">Description</string>
    <string name="task_name">Task Name</string>
    <string name="create_new_task">Create New Task</string>
    <string name="remind_me">Remind me</string>
    <string name="task_end">Task End</string>
    <string name="date">Date</string>
    <string name="create_task">Create Task</string>
    <string name="task_color">Task \nColor</string>
    <string name="Quiz">Are you sure you want to permanently delete this item?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="filter">%1s, %2s</string>
    <string name="all_fields_must_be_filled">All fields must be filled.</string>
    <string name="ok">OK</string>
    <string name="set_filter">"Set your filter here"</string>
    <string name="your_description">Your Description </string>
    <string name="design_app">Design app</string>
    <string name="success">Success</string>
    <string name="successfully_deleted">Successfully Deleted</string>
    <string name="you_can_t_choose_time_in_the_past">You can\'t choose time in the past</string>
    <string name="empty_list">List Is Empty</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="create_new_todo">Create New ToDo</string>
    <string name="todo_name">ToDo Name</string>
    <string name="todo_color">ToDo \nColor</string>
    <string name="create_todo">Create ToDo</string>
</resources>