<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_back">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_20"
        android:layout_marginTop="@dimen/space_20"
        android:gravity="center"
        android:text="@string/Quiz"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size_25"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnYesTodo"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_50"
        android:layout_marginHorizontal="@dimen/space_20"
        android:layout_marginBottom="@dimen/space_20"
        android:background="@drawable/btn_red"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btnNoTodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnNoTodo"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNoTodo"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_50"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginBottom="@dimen/space_20"
        android:layout_marginHorizontal="@dimen/space_20"
        android:background="@drawable/btn_red"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnYesTodo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>