<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    tools:context=".presentation.ui.createNewTask.CreateNewTaskFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBackNewTask"
        android:layout_width="@dimen/space_40"
        android:layout_height="@dimen/space_40"
        app:layout_constraintBottom_toBottomOf="@id/tvHeading"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="@id/tvHeading"
        app:srcCompat="@drawable/ic_arrow_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/create_new_task"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size_25"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTaskNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        android:text="@string/task_name"
        android:textColor="@color/coral"
        android:textSize="@dimen/size_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edTaskName"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:background="@null"
        android:ellipsize="end"
        android:hint="@string/design_app"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:minHeight="@dimen/space_45"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size_35"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tvTaskNameTitle" />

    <View
        android:id="@+id/viewFirstLine"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_2"
        android:layout_marginTop="@dimen/space_5"
        android:background="@color/light_grey"
        android:elevation="@dimen/space_5"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/edTaskName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTaskDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        android:text="@string/description"
        android:textColor="@color/coral"
        android:textSize="@dimen/size_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/viewFirstLine" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edDescriptionName"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:background="@null"
        android:ellipsize="end"
        android:hint="@string/your_description"
        android:inputType="textCapSentences"
        android:maxLines="3"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size_18"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tvTaskDescriptionTitle" />

    <View
        android:id="@+id/viewSecondLine"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_2"
        android:layout_marginTop="@dimen/space_5"
        android:background="@color/light_grey"
        android:elevation="@dimen/space_5"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/edDescriptionName" />

    <View
        android:id="@+id/viewRemindMe"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_70"
        android:layout_marginTop="@dimen/space_30"
        android:background="@drawable/back_month_filter"
        android:elevation="@dimen/space_5"
        android:translationZ="@dimen/space_15"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/viewSecondLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRemindMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_20"
        android:elevation="@dimen/space_5"
        android:text="@string/remind_me"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        android:translationZ="@dimen/space_15"
        app:layout_constraintBottom_toBottomOf="@id/viewRemindMe"
        app:layout_constraintStart_toStartOf="@id/viewRemindMe"
        app:layout_constraintTop_toTopOf="@id/viewRemindMe" />

    <Switch
        android:id="@+id/btnRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_20"
        android:checked="true"
        android:elevation="@dimen/space_5"
        android:minWidth="@dimen/space_50"
        android:minHeight="@dimen/space_50"
        android:track="@drawable/shape_switch_track"
        android:translationZ="@dimen/space_15"
        app:layout_constraintBottom_toBottomOf="@id/viewRemindMe"
        app:layout_constraintEnd_toEndOf="@id/viewRemindMe"
        app:layout_constraintTop_toTopOf="@id/viewRemindMe"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/viewTime"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_80"
        android:layout_marginTop="@dimen/space_25"
        android:layout_marginEnd="@dimen/space_20"
        android:background="@drawable/btn_blue"
        android:elevation="@dimen/space_5"
        android:translationZ="@dimen/space_15"
        app:layout_constraintEnd_toStartOf="@id/viewDate"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/viewRemindMe" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icTime"
        android:layout_width="@dimen/space_30"
        android:layout_height="@dimen/space_30"
        android:layout_marginStart="@dimen/space_20"
        android:elevation="@dimen/space_5"
        android:translationZ="@dimen/space_15"
        app:layout_constraintBottom_toBottomOf="@id/viewTime"
        app:layout_constraintStart_toStartOf="@id/viewTime"
        app:layout_constraintTop_toTopOf="@id/viewTime"
        app:srcCompat="@drawable/ic_time" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_10"
        android:layout_marginTop="@dimen/space_15"
        android:elevation="@dimen/space_5"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16"
        android:textStyle="bold"
        android:translationZ="@dimen/space_15"
        app:layout_constraintStart_toEndOf="@id/icTime"
        app:layout_constraintTop_toTopOf="@id/viewTime"
        tools:text="14:30pm" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTaskEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_5"
        android:elevation="@dimen/space_5"
        android:text="@string/task_end"
        android:textColor="@color/fade_white"
        android:textStyle="bold"
        android:translationZ="@dimen/space_15"
        app:layout_constraintStart_toStartOf="@id/tvTaskTime"
        app:layout_constraintTop_toBottomOf="@id/tvTaskTime" />

    <View
        android:id="@+id/viewDate"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_80"
        android:background="@drawable/btn_purple"
        android:elevation="@dimen/space_5"
        android:translationZ="@dimen/space_15"
        app:layout_constraintBottom_toBottomOf="@id/viewTime"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toEndOf="@id/viewTime"
        app:layout_constraintTop_toTopOf="@id/viewTime" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icDate"
        android:layout_width="@dimen/space_30"
        android:layout_height="@dimen/space_30"
        android:layout_marginStart="@dimen/space_20"
        android:elevation="@dimen/space_5"
        android:translationZ="@dimen/space_15"
        app:layout_constraintBottom_toBottomOf="@id/viewDate"
        app:layout_constraintStart_toStartOf="@id/viewDate"
        app:layout_constraintTop_toTopOf="@id/viewDate"
        app:srcCompat="@drawable/ic_calendar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTaskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_10"
        android:layout_marginTop="@dimen/space_15"
        android:elevation="@dimen/space_5"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16"
        android:textStyle="bold"
        android:translationZ="@dimen/space_15"
        app:layout_constraintStart_toEndOf="@id/icDate"
        app:layout_constraintTop_toTopOf="@id/viewDate"
        tools:text="17,May 2023" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDateEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_5"
        android:elevation="@dimen/space_5"
        android:text="@string/date"
        android:textColor="@color/fade_white"
        android:textStyle="bold"
        android:translationZ="@dimen/space_15"
        app:layout_constraintStart_toStartOf="@id/tvTaskDate"
        app:layout_constraintTop_toBottomOf="@id/tvTaskDate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTaskColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_color"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_0"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/viewBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTaskColor"
        app:layout_constraintTop_toBottomOf="@id/viewDate">

        <RadioButton
            android:id="@+id/btnColorRedTask"
            android:layout_width="@dimen/space_55"
            android:layout_height="@dimen/space_55"
            android:layout_marginStart="@dimen/space_15"
            android:background="@drawable/radio_red"
            android:button="@android:color/transparent"
            android:checked="true"
            android:elevation="@dimen/space_5"
            android:translationZ="@dimen/space_15" />

        <RadioButton
            android:id="@+id/btnColorPurpleTask"
            android:layout_width="@dimen/space_55"
            android:layout_height="@dimen/space_55"
            android:layout_marginStart="@dimen/space_20"
            android:background="@drawable/radio_purple"
            android:button="@android:color/transparent"
            android:elevation="@dimen/space_5"
            android:translationZ="@dimen/space_15" />

        <RadioButton
            android:id="@+id/btnColorBlueTask"
            android:layout_width="@dimen/space_55"
            android:layout_height="@dimen/space_55"
            android:layout_marginStart="@dimen/space_15"
            android:background="@drawable/radio_blue"
            android:button="@android:color/transparent"
            android:elevation="@dimen/space_5"
            android:translationZ="@dimen/space_15" />

        <RadioButton
            android:id="@+id/btnColorOrangeTask"
            android:layout_width="@dimen/space_55"
            android:layout_height="@dimen/space_55"
            android:layout_marginStart="@dimen/space_15"
            android:background="@drawable/radio_orange"
            android:button="@android:color/transparent"
            android:elevation="@dimen/space_5"
            android:translationZ="@dimen/space_15" />

    </RadioGroup>


    <View
        android:id="@+id/viewBottom"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_95"
        android:background="@drawable/back_view_btn"
        android:elevation="@dimen/space_5"
        android:translationZ="@dimen/space_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCreateTask"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_70"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginBottom="@dimen/space_20"
        android:background="@drawable/btn_red"
        android:elevation="@dimen/space_5"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:shadowRadius="70"
        android:text="@string/create_task"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        android:translationZ="@dimen/space_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="@+id/viewBottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_20" />

</androidx.constraintlayout.widget.ConstraintLayout>