<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    tools:context=".presentation.ui.mainFragment.MainFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnLeft"
        android:layout_width="@dimen/space_120"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        android:background="@drawable/btn_red"
        android:elevation="@dimen/space_5"
        android:gravity="center"
        android:paddingVertical="@dimen/space_10"
        android:shadowColor="@color/white"
        android:shadowRadius="30"
        android:text="@string/add_new"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        android:translationZ="@dimen/space_15"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnRight"
        android:layout_width="@dimen/space_120"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_red"
        android:elevation="@dimen/space_5"
        android:gravity="center"
        android:paddingVertical="@dimen/space_10"
        android:shadowColor="@color/white"
        android:shadowRadius="30"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        android:translationZ="@dimen/space_15"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toTopOf="@+id/btnLeft"
        tools:text="@string/type" />

    <TextView
        android:id="@+id/filterMonth"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_80"
        android:layout_marginTop="@dimen/space_35"
        android:background="@drawable/back_month_filter"
        android:elevation="@dimen/space_5"
        android:gravity="center|start"
        android:paddingHorizontal="@dimen/space_20"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        android:translationZ="@dimen/space_15"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/btnLeft"
        tools:text="@string/filter" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnDate"
        android:layout_width="@dimen/space_45"
        android:layout_height="@dimen/space_45"
        android:layout_marginEnd="@dimen/space_30"
        android:background="@drawable/btn_red"
        android:elevation="@dimen/space_10"
        android:padding="@dimen/space_10"
        android:src="@drawable/ic_calendar"
        android:translationZ="@dimen/space_20"
        app:layout_constraintBottom_toBottomOf="@+id/filterMonth"
        app:layout_constraintEnd_toEndOf="@+id/filterMonth"
        app:layout_constraintTop_toTopOf="@+id/filterMonth" />

    <View
        android:id="@+id/backView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_0"
        android:layout_marginTop="@dimen/space_30"
        android:background="@drawable/back_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterMonth" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTodo"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_0"
        android:layout_marginTop="@dimen/space_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backView"
        tools:listitem="@layout/item_todo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_20" />

</androidx.constraintlayout.widget.ConstraintLayout>